# includify

./: .clang-format  .gitignore  LICENSE  README.md  conanfile.py  pyproject.toml
.github/workflows/: ci.yml
source/: CMakeLists.txt
source/app/src/: main.cpp
source/lib/include/includify/: includify.hpp
source/lib/src/: includify.cpp
source/test/include/: random_sequence.hpp
source/test/src/: as_classic_string.cpp
tools/: scripts.py
